--- a/arch/arm64/boot/dts/hobot/Makefile
+++ b/arch/arm64/boot/dts/hobot/Makefile
@@ -1,3 +1,3 @@
 # SPDX-License-Identifier: GPL-2.0
 DTC_FLAGS += -@
-dtb-y += x5-fpga.dtb x5-som.dtb x5-svb.dtb x5-evb-lp4-1_a.dtb x5-evb-lp4-1_b.dtb
+dtb-y += x5-fpga.dtb x5-som.dtb x5-svb.dtb x5-evb-lp4-1_a.dtb x5-evb-lp4-1_b.dtb x5-evb-lp4-v1p2.dtb
