dts: hobot: chore [X5-1975] Fix comment for x5 evb dts files
Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: I7576b3fa1896713c84f3f2ae23fdd35cd99b39ae

--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v1p2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v1p2.dts
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0
 /*
- * dts for Sunrise5 EVB 1_B board
+ * dts for Sunrise5 EVB LP4 V1P2 board
  *
  * Copyright (C) 2024 D-Robotics Inc.
  *
