--- a/arch/arm64/boot/dts/hobot/x5-evb-lp4-v1p2.dts
+++ b/arch/arm64/boot/dts/hobot/x5-evb-lp4-v1p2.dts
@@ -12,3 +12,32 @@
 / {
 	model = "D-Robotics X5 EVB LP4 V1P2 board";
 };
+
+&horizon_tsn {
+	status = "disabled";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_31>;
+	phyreset-gpio = <&ls_gpio0_porta 31 GPIO_ACTIVE_LOW>;
+};
+
+&hobot_tsn {
+	status = "disabled";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_31>;
+	phyreset-gpio = <&ls_gpio0_porta 31 GPIO_ACTIVE_LOW>;
+};
+
+&gmac_tsn {
+	/* Use gmac_tsn or hobot_tsn for evb v1p2 board currently,
+	   horizon_tsn driver is not ready yet... */
+	status = "okay";
+
+	phy-mode = "rgmii-id";
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_enet &lsio_gpio0_31>;
+	phyreset-gpio = <&ls_gpio0_porta 31 GPIO_ACTIVE_LOW>;
+};
