--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -551,6 +551,8 @@ CONFIG_HOBOT_BPU=y
 CONFIG_BPU=m
 CONFIG_BPU_CORE=m
 CONFIG_HOBOT_DSP=y
+CONFIG_HOBOT_HARDLOCKUP_DETECTOR=y
+CONFIG_HOBOT_CORESIGHT=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=y
