soc: debug: feat [X5-2281] Detect hard lockups without NMIs using secondary cpus
Summary:
From: Colin Cross <ccross@android.com>
Date: Fri, 11 Jan 2013 13:51:48 -0800
Subject: [PATCH] hardlockup: detect hard lockups without NMIs using secondary cpus
Emulate NMIs on systems where they are not available by using timer
interrupts on other cpus.  Each cpu will use its softlockup hrtimer
to check that the next cpu is processing hrtimer interrupts by
verifying that a counter is increasing.
This patch is useful on systems where the hardlockup detector is not
available due to a lack of NMIs, for example most ARM SoCs.
Without this patch any cpu stuck with interrupts disabled can
cause a hardware watchdog reset with no debugging information,
but with this patch the kernel can detect the lockup and panic,
which can result in useful debugging info.

Change-Id: Icf4251441adb6efb5d859bf42fd1d00c6db85ee7
Signed-off-by: ming.yu <ming.yu@hobot.cc>

--- a/drivers/soc/hobot/Kconfig
+++ b/drivers/soc/hobot/Kconfig
@@ -5,6 +5,13 @@ menuconfig HOBOT_SOC_DRIVERS
         bool "HOBOT SOC drivers support"
         depends on ARCH_HOBOT
 
+menuconfig HOBOT_SOC_DEBUG
+        bool "Kernel Debugging Support on Hobot Platform"
+        depends on ARCH_HOBOT
+        default y
+        help
+          Say yes to enable the kernle debugging drivers for Hobot platform
+
 source "drivers/soc/hobot/bpu/Kconfig"
 source "drivers/soc/hobot/socinfo/Kconfig"
 source "drivers/soc/hobot/reboot_reason/Kconfig"
@@ -12,3 +19,6 @@ source "drivers/soc/hobot/ddr_monitor/Kconfig"
 source "drivers/soc/hobot/firewall/Kconfig"
 source "drivers/soc/hobot/camera_power/Kconfig"
 source "drivers/soc/hobot/dsp/Kconfig"
+if HOBOT_SOC_DEBUG
+source "drivers/soc/hobot/debug/Kconfig"
+endif #HOBOT_SOC_DEBUG
