--- a/drivers/soc/hobot/Makefile
+++ b/drivers/soc/hobot/Makefile
@@ -4,6 +4,7 @@
 #
 
 obj-$(CONFIG_HOBOT_BPU)                 += bpu/
+obj-$(CONFIG_HOBOT_SOC_DEBUG)           += debug/
 obj-y                                   += socinfo/
 obj-y                                   += reboot_reason/
 obj-y                                   += ddr_monitor/
