soc: debug: feat [X5-2281] Trigger panic on the hardlockup core via coresight
Summary:
dump pcsr and trigger panic on the hardlockup core via coresight.
Reference link: https://github.com/smarek/G361F-Kernel/blob/master/arch/arm64/mach/coresight-v8.c

Change-Id: I4f7982adb85628aacea628f9ca6cff5175c88d52
Signed-off-by: ming.yu <ming.yu@hobot.cc>

--- a/drivers/soc/hobot/debug/Kconfig
+++ b/drivers/soc/hobot/debug/Kconfig
@@ -2,3 +2,9 @@ config HOBOT_HARDLOCKUP_DETECTOR
 	bool "support the hard deadlock detection"
 	help
 	  support the hard deadlock detection.
+
+config HOBOT_CORESIGHT
+	bool "support coresight features"
+	help
+	  Support coresight features such as dump pcsr, trigger panic etc.
+
