--- a/drivers/soc/hobot/debug/Makefile
+++ b/drivers/soc/hobot/debug/Makefile
@@ -2,3 +2,4 @@
 # Makefile for the kernel debug driver on the hobot platform
 #
 
+obj-$(CONFIG_HOBOT_CORESIGHT) += hobot_coresight.o hobot_coresight_v8.o
