feat(x5.dtsi): Add dev/spidev2.0
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3855,6 +3855,12 @@
 				#size-cells = <0>;
 				resets = <&socrst LSIO_SPI2_RESET>;
 				reset-names = "spi";
+
+				spidev@0 {
+					compatible = "dr,x5-spidev";
+					spi-max-frequency = <32000000>;
+					reg = <0>;
+				};
 			};
 
 			spi3: spi@34030000 {
