--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3855,6 +3855,8 @@
 				#size-cells = <0>;
 				resets = <&socrst LSIO_SPI2_RESET>;
 				reset-names = "spi";
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_spi2>;
 
 				spidev@0 {
 					compatible = "dr,x5-spidev";
@@ -3939,6 +3941,8 @@
 				interrupts = <GIC_SPI 83 IRQ_TYPE_LEVEL_HIGH>;
 				resets = <&socrst LSIO_UART2_RESET>;
 				broken-auto-flow-control;
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_uart2>;
 			};
 
 			uart3: serial@34090000 {
@@ -3953,6 +3957,8 @@
 				interrupts = <GIC_SPI 84 IRQ_TYPE_LEVEL_HIGH>;
 				resets = <&socrst LSIO_UART3_RESET>;
 				broken-auto-flow-control;
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_uart3>;
 			};
 
 			uart4: serial@340a0000 {
@@ -3997,6 +4003,8 @@
 				clock-frequency = <100000>;
 				resets = <&socrst LSIO_I2C1_APB_RESET>;
 				i2c-sda-hold-time-ns = <30>;
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_i2c1>;
 			};
 
 			i2c2: i2c@340d0000 {
@@ -4257,6 +4265,9 @@
 				interrupts = <GIC_SPI 73 IRQ_TYPE_LEVEL_HIGH>;
 				resets = <&socrst LSIO_UART6_RESET>;
 				broken-auto-flow-control;
+				pinctrl-names = "default";
+				pinctrl-0 = <&pinctrl_uart6>;
+
 			};
 
 			uart7: serial@34060000 {
