dts: hobot: feat [X5-146] Update ddr_size in remoteproc node, remove useless offset
Summary:
1. Reduce ddr_size to match actual sram size;
2. Remove dsp_ddr_offset as dsp_ddr is defined to start at the correct
address. No need to add extra offset for correct data from dsp coredump.

Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: I834f1090d2a3b8a708d0e71ef4831491e4871c92

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3668,8 +3668,7 @@
 			dsp_iram0_map_addr = <0x20200000 0x10000>;
 			dsp_dram0_map_addr = <0x20210000 0x10000>;
 			dsp_dram1_map_addr = <0x20220000 0x10000>;
-			dsp_ddr_offset = <0x480000>;
-			dsp_ddr_size = <0x1d00000>;
+			dsp_ddr_size = <0x180000>;
 			log-offset = <0x7fe000>;
 			log-size = <4096>;
 			log-write-index-offset = <0x7fff10>;
