ASoC: archband: feat [X5-2330] Support PDM multi channels
Summary:
1. Add platform driver to support data transfer
2. Update pdm driver to support multi channels
3. Support S24_LE sample format

Signed-off-by: v-lingfeng.sun <v-lingfeng.sun@horizon.cc>
Change-Id: Ieeb66f262621220345b5fdd3598eeaf0d9665688

--- a/sound/soc/archband/Makefile
+++ b/sound/soc/archband/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0-only
 # SYNOPSYS Platform Support
-obj-$(CONFIG_SND_ARCHBAND_PDM) += archband-pdm.o
+archband_pdm-objs := archband-pdm.o hobot-i2s-dma-x5.o hobot-platform-x5.o
+obj-$(CONFIG_SND_ARCHBAND_PDM) += archband_pdm.o
 obj-$(CONFIG_SND_VIRT_CODEC) += virt-codec.o
