dts:hifi5_qos: fix [X5-2348] Disable hifi5 qos device
Summary:
1. enable hifi5 qos will lead hung in resume, disalbe it temperary

Signed-off-by: ming.yu <ming.yu@hobot.cc>
Change-Id: I614d7a0a2cc06482cc2b7461002e7914b83dd840

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3652,7 +3652,7 @@
 			power-domains = <&power X5_DSP_HIFI5>;
 			consumer-dev = <&remoteproc_hifi5>;
 			clocks-num = <0>;
-			status = "okay";
+			status = "disabled";
 			ports-num = <1>;
 			ports-off = <0x0008>;
 		};
