config: feat [X5-1206] Enable fs_encrypt and aes-cts for FBE
Signed-off-by: zhiwei01.li <zhiwei01.li@d-robotics.cc>
Change-Id: Id621e056b9ad4e1ce210a373262fefbe3a6f01ff

--- a/arch/arm64/configs/hobot_x5_soc_perf_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_perf_defconfig
@@ -567,6 +567,7 @@ CONFIG_OPTEE=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT3_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FANOTIFY=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
@@ -588,7 +589,6 @@ CONFIG_CRYPTO_TEST=m
 CONFIG_CRYPTO_DH=y
 CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_DES=y
-CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_DRBG_HASH=y
