--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -3655,7 +3655,7 @@
 			power-domains = <&power X5_DSP_HIFI5>;
 			consumer-dev = <&remoteproc_hifi5>;
 			clocks-num = <0>;
-			status = "disabled";
+			status = "okay";
 			ports-num = <1>;
 			ports-off = <0x0008>;
 		};
