spi: dts: fix [X5-2580] Enable /dev/spidev2.0 device node for evb
Summary:
- To facilitate user evaluation of the spi interface on Pin 40,
   enable /dev/spidev2.0

Signed-off-by: yaqiang.li <yaqiang.li@d-robotics.cc>
Change-Id: I531936635d803f7da8ffad4bcee5e4e2f9973149

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -414,6 +414,12 @@
 	status = "okay";
 	dma-names = "tx", "rx";
 	dmas = <&axi_dmac 25>, <&axi_dmac 24>;
+
+	spidev@0 {
+		compatible = "dr,x5-spidev";
+		spi-max-frequency = <32000000>;
+		reg = <0>;
+	};
 };
 
 &dc8000_nano {
