dts: rtc: feat [X5-2435] Add support for PCF8563 external RTC driver module
Signed-off-by: xiangqing.shi <xiangqing.shi@horizon.cc>
Change-Id: Id97809dc8ede21c49a2101f89aa4eabcf0c799fa

--- a/arch/arm64/boot/dts/hobot/x5-evb.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5-evb.dtsi
@@ -338,6 +338,15 @@
 			};
 		};
 	};
+
+	/* pcf8563 */
+	pcf8563@0x51 {
+		compatible = "nxp,pcf8563";
+		status = "okay";
+		reg = <0x51>;
+		interrupts = <GIC_SPI 66 IRQ_TYPE_LEVEL_LOW>;
+		clock-output-names = "wifi-32k-clk";
+	};
 };
 
 &i2c7 {
