--- a/arch/arm64/configs/hobot_x5_soc_defconfig
+++ b/arch/arm64/configs/hobot_x5_soc_defconfig
@@ -521,6 +521,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_DWCMSHC=y
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DEBUG=y
+CONFIG_RTC_DRV_PCF8563=m
 CONFIG_RTC_DRV_DWAPB=y
 CONFIG_DMADEVICES=y
 CONFIG_DW_AXI_DMAC=y
