fix(ubuntu_defconfig) Add DRM_PANEL_JC_050HD134 for EVB X5
Signed-off-by: xin03.liu <xin03.liu@horizon.cc>

--- a/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
+++ b/arch/arm64/configs/hobot_x5_rdk_ubuntu_defconfig
@@ -952,6 +952,7 @@ CONFIG_VIDEO_OV5640=m
 CONFIG_DRM=y
 CONFIG_DRM_LOAD_EDID_FIRMWARE=y
 CONFIG_DRM_UDL=m
+CONFIG_DRM_PANEL_JC_050HD134=m
 CONFIG_DRM_PANEL_WH_CM480=m
 CONFIG_DRM_PANEL_WAVESHARE_TOUCHSCREEN=m
 CONFIG_DRM_SII902X=m
