dts: hobot: fix [X5-2670] Fix typo
Summary:
Fixed typo in x5.dtsi, status of duplex_card should be "disabled" instead of "disable".

Signed-off-by: dinggao.pan <dinggao.pan@d-robotics.cc>
Change-Id: Iddcaf47f75a4b3ee3cf0e9eae9b3d1d3f335b571

--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4605,7 +4605,7 @@
 	/* dsp */
 	duplex_card: duplex_card {
 		compatible = "duplex-audio-card";
-		status = "disable";
+		status = "disabled";
 	};
 
 	hobot_sound_machine: hobot_sound_machine {
