--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -4597,7 +4597,7 @@
 	/* dsp */
 	duplex_card: duplex_card {
 		compatible = "duplex-audio-card";
-		status = "disable";
+		status = "disabled";
 	};
 
 	hobot_sound_machine: hobot_sound_machine {
