--- a/arch/arm64/boot/dts/hobot/x5.dtsi
+++ b/arch/arm64/boot/dts/hobot/x5.dtsi
@@ -2123,6 +2123,7 @@
 					mode-uart = <0x00000300>;
 					mode-recovery = <0x00000400>;
 					mode-eye = <0x00000500>;
+					mode-dfu = <0x00000600>;
 				};
 
 				reboot-reason {
